--- a/package.json
+++ b/package.json
@@ -8,19 +8,22 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.39",
+    "@types/node": "^20.10.6",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "@vitejs/plugin-react": "^4.2.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.3",
+    "vite": "^5.0.10",
+    "vite-tsconfig-paths": "^4.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "react-scripts test",
