--- a/package.json
+++ b/package.json
@@ -4,17 +4,14 @@
   "homepage": "https://scale.chrismboyer.com",
   "private": false,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
     "@types/node": "^20.10.6",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@vitejs/plugin-react": "^4.2.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "styled-components": "^5.3.5",
     "typescript": "^4.7.3",
     "vite": "^5.0.10",
     "vite-tsconfig-paths": "^4.2.3",
@@ -31,8 +28,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
