--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "es5",
         "lib": ["dom", "dom.iterable", "esnext"],
-        "types": ["vite/client"],
+        "types": ["vite/client", "jest"],
         "allowJs": true,
         "skipLibCheck": true,
         "esModuleInterop": true,
