--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "preview": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +47,8 @@
     "@babel/core": "^7.24.4",
     "@babel/preset-env": "^7.24.4",
     "@babel/preset-typescript": "^7.24.1",
+    "@commitlint/cli": "^19.2.2",
+    "@commitlint/config-conventional": "^19.2.2",
     "@types/jest": "^29.5.12",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
@@ -56,6 +59,7 @@
     "eslint-plugin-react": "^7.30.0",
     "eslint-plugin-typescript-sort-keys": "^2.1.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "husky": "^9.0.11",
     "jest": "^29.7.0"
   }
 }
